added custom event button

--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
     </head>
 
     <body>
-        <h1>Welcome to the RedKlouds Jokeish App</h1>
+        <h1>Welcome to the RedKlouds Joke-ish App</h1>
         <div id="app"></div>
     </body>
 </html>
