--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
         <title>Jokeish App</title>
         <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
         <script src="https://cdn.auth0.com/js/auth0/9.0/auth0.min.js"></script>
+        <script src="https://cdn.auth0.com/js/auth0/9.11/auth0.min.js"></script>
         <script type="application/javascript" src="https://unpkg.com/react@16.0.0/umd/react.production.min.js"></script>
         <script type="application/javascript" src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.production.min.js"></script>
         <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
