--- a/views/index.html
+++ b/views/index.html
@@ -2,10 +2,9 @@
 
 <html>
     <head>
-        <title> Jokeish App</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-        <title>Jokeish App</title>
+        <title>Jokeish App V5.0</title>
         <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
         <script src="https://cdn.auth0.com/js/auth0/9.0/auth0.min.js"></script>
         <script src="https://cdn.auth0.com/js/auth0/9.11/auth0.min.js"></script>
